# VolterraFilter

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  installer.nsi
.github/workflows/: build.yml  lint.yml  release.yml
CUDA/: VolterraCUDAProcessor.h  VolterraKernels.cuh
Source/: PluginInit.cpp  PrunedVolterraFilter.h  VolterraEditor.h  VolterraPresets.h  VolterraProcessor.h
