cmake_minimum_required(VERSION 3.24)

# ─────────────────────────────────────────────────────────────────────────────
#  Project
# ─────────────────────────────────────────────────────────────────────────────
project(VolterraPlugin
    VERSION 1.0.0
    LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# ─────────────────────────────────────────────────────────────────────────────
#  Optional CUDA — probe before enabling the language
# ─────────────────────────────────────────────────────────────────────────────
# find_package(CUDAToolkit) (CMake 3.17+) is a soft probe: a missing toolkit
# is a warning, not a fatal configure error, so CPU-only builds work without
# any -DVOLTERRA_CUDA=OFF flag.

find_package(CUDAToolkit QUIET)

include(CheckLanguage)
if(CUDAToolkit_FOUND)
    check_language(CUDA)
endif()

if(CUDAToolkit_FOUND AND CMAKE_CUDA_COMPILER)
    message(STATUS "CUDA Toolkit found: ${CUDAToolkit_VERSION}  root=${CUDAToolkit_LIBRARY_ROOT}")
    enable_language(CUDA)
    set(VOLTERRA_CUDA ON)
    set(CMAKE_CUDA_STANDARD 17)
    set(CMAKE_CUDA_STANDARD_REQUIRED ON)

    if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
        # sm_89 = RTX 4070 / Ada Lovelace.  Use "native" for auto-detect.
        set(CMAKE_CUDA_ARCHITECTURES 89)
    endif()

    message(STATUS "CUDA architectures: ${CMAKE_CUDA_ARCHITECTURES}")
else()
    if(CUDAToolkit_FOUND)
        message(STATUS "CUDA Toolkit found but CUDA compiler unavailable — CPU-only build.")
    else()
        message(STATUS "CUDA Toolkit NOT found — CPU-only build.")
    endif()
    set(VOLTERRA_CUDA OFF)
endif()

# ─────────────────────────────────────────────────────────────────────────────
#  JUCE
# ─────────────────────────────────────────────────────────────────────────────
if(NOT DEFINED JUCE_DIR)
    set(JUCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../JUCE")
endif()

add_subdirectory("${JUCE_DIR}" "${CMAKE_BINARY_DIR}/JUCE")

# ─────────────────────────────────────────────────────────────────────────────
#  Source file lists
# ─────────────────────────────────────────────────────────────────────────────
#
# DESIGN: PluginInit.cpp is a committed source file, not generated by CMake.
#
# Rationale for removing file(WRITE):
#
#  1. file(WRITE) runs at configure time, not build time.  It cannot express
#     a build-phase dependency on other source files.  For a file whose content
#     never varies based on CMake variables, there is nothing to generate.
#
#  2. The compiler's implicit dependency scanner handles what matters: because
#     PluginInit.cpp #includes VolterraProcessor.h, the build system records:
#
#       PluginInit.cpp.o → VolterraProcessor.h
#                        → PrunedVolterraFilter.h       (transitive)
#                        → VolterraCUDAProcessor.h      (if CUDA, transitive)
#                        → VolterraKernels.cuh           (transitive)
#
#     Touching any header in that chain triggers recompilation on the next
#     incremental build with no manual cmake re-run needed.
#
#  3. configure_file() is the right tool when file content must embed CMake
#     variables (version numbers, feature flags, etc.).  If the entry point
#     ever needs that, replace PluginInit.cpp with PluginInit.cpp.in and
#     add configure_file() here.  For now it is unnecessary.

set(VOLTERRA_COMPILED_SOURCES
    # The single compiled TU.  All other source is pulled in transitively
    # via #include, which the dependency scanner tracks automatically.
    Source/PluginInit.cpp
)

# Headers listed here appear in IDE project trees and are checked by static
# analysis tools, but are NOT compiled directly.  Their dependency on
# PluginInit.cpp.o is established implicitly via the #include chain.
set(VOLTERRA_HEADER_SOURCES
    Source/PrunedVolterraFilter.h
    Source/VolterraProcessor.h
    Source/VolterraPresets.h
    Source/VolterraEditor.h
)

if(VOLTERRA_CUDA)
    # Mark .cuh files explicitly as headers so CMake does not attempt to
    # compile them as C++ translation units.  Without this, some generators
    # (Visual Studio, Xcode) pass .cuh files to the C++ compiler directly
    # when they appear in target_sources(), producing a compile error.
    set_source_files_properties(
        CUDA/VolterraKernels.cuh
        CUDA/VolterraCUDAProcessor.h
        PROPERTIES HEADER_FILE_ONLY TRUE
    )

    list(APPEND VOLTERRA_HEADER_SOURCES
        CUDA/VolterraKernels.cuh
        CUDA/VolterraCUDAProcessor.h
    )
endif()

# ─────────────────────────────────────────────────────────────────────────────
#  Binary assets — embedded at compile time via juce_add_binary_data.
#  Access in code via #include <BinaryData.h> then BinaryData::background_png
#  and BinaryData::background_pngSize.
# ─────────────────────────────────────────────────────────────────────────────
juce_add_binary_data(Volterra_BinaryData
    SOURCES
        assets/background.png
)

# ─────────────────────────────────────────────────────────────────────────────
#  JUCE plugin target
# ─────────────────────────────────────────────────────────────────────────────
juce_add_plugin(VolterraPlugin
    VERSION                     "${PROJECT_VERSION}"
    COMPANY_NAME                "VoltDSP"
    PLUGIN_MANUFACTURER_CODE    Volt
    PLUGIN_CODE                 VnlF
    FORMATS                     VST3 AU Standalone
    PRODUCT_NAME                "Volterra NL Filter"
    IS_SYNTH                    FALSE
    NEEDS_MIDI_INPUT            FALSE
    NEEDS_MIDI_OUTPUT           FALSE
    IS_MIDI_EFFECT              FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    COPY_PLUGIN_AFTER_BUILD     FALSE
    ICON_BIG                    "${CMAKE_CURRENT_SOURCE_DIR}/assets/icon_512.png"
    ICON_SMALL                  "${CMAKE_CURRENT_SOURCE_DIR}/assets/icon_64.png"
)

target_sources(VolterraPlugin
    PRIVATE
        ${VOLTERRA_COMPILED_SOURCES}  # compiled
        ${VOLTERRA_HEADER_SOURCES}    # IDE-visible, dependency-tracked via scanner
)

# ─────────────────────────────────────────────────────────────────────────────
#  Include paths
# ─────────────────────────────────────────────────────────────────────────────
target_include_directories(VolterraPlugin PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/Source"
    "${CMAKE_CURRENT_SOURCE_DIR}/CUDA"
)

# ─────────────────────────────────────────────────────────────────────────────
#  JUCE module dependencies
# ─────────────────────────────────────────────────────────────────────────────
target_link_libraries(VolterraPlugin PRIVATE
    Volterra_BinaryData           # embedded assets (background.png)
    juce::juce_audio_basics
    juce::juce_audio_devices
    juce::juce_audio_formats
    juce::juce_audio_plugin_client
    juce::juce_audio_processors
    juce::juce_audio_utils
    juce::juce_core
    juce::juce_data_structures
    juce::juce_dsp
    juce::juce_events
    juce::juce_graphics
    juce::juce_gui_basics
    juce::juce_gui_extra
    juce_recommended_config_flags
    juce_recommended_lto_flags
    juce_recommended_warning_flags
)

target_compile_definitions(VolterraPlugin PUBLIC
    JUCE_IGNORE_VST3_MISMATCHED_PARAMETER_ID_WARNING=1
)

# ─────────────────────────────────────────────────────────────────────────────
#  CUDA linkage (conditional)
# ─────────────────────────────────────────────────────────────────────────────
if(VOLTERRA_CUDA)
    target_compile_definitions(VolterraPlugin PRIVATE
        VOLTERRA_CUDA_AVAILABLE=1
    )

    target_link_libraries(VolterraPlugin PRIVATE
        CUDA::cudart
        CUDA::cublas
        CUDA::cusolver
    )

    # Separable compilation is required because our .cuh device kernels are
    # included from a .cpp TU (PluginInit.cpp) rather than from a standalone
    # .cu file.  CUDA_RESOLVE_DEVICE_SYMBOLS triggers the device-link step
    # that produces the final fatbinary.
    set_target_properties(VolterraPlugin PROPERTIES
        CUDA_SEPARABLE_COMPILATION  ON
        CUDA_RESOLVE_DEVICE_SYMBOLS ON
    )

    target_compile_options(VolterraPlugin PRIVATE
        $<$<COMPILE_LANGUAGE:CUDA>:
            --expt-relaxed-constexpr   # needed for constexpr in device code
            -lineinfo                   # Nsight-compatible line info (no perf cost)
            --use_fast_math             # fused FMA; acceptable for audio saturation
        >
    )
endif()

# ─────────────────────────────────────────────────────────────────────────────
#  Host compiler flags
# ─────────────────────────────────────────────────────────────────────────────
if(MSVC)
    target_compile_options(VolterraPlugin PRIVATE
        /W4
        /arch:AVX2
        /fp:fast
    )
else()
    target_compile_options(VolterraPlugin PRIVATE
        -Wall -Wextra -Wpedantic
        -mavx2 -mfma    # AVX2 + FMA for the CPU inner tap-accumulation loop
        -ffast-math     # re-association of FP ops; fine for nonlinear audio
    )
endif()

# ─────────────────────────────────────────────────────────────────────────────
#  OPTIONAL: configure_file() pattern (for future use)
# ─────────────────────────────────────────────────────────────────────────────
# If PluginInit.cpp ever needs to embed CMake-time values (e.g., a version
# string baked into the binary, or a conditional entry point based on build
# type), replace Source/PluginInit.cpp with Source/PluginInit.cpp.in and
# uncomment the following block.  configure_file() re-runs at build time
# when the .in file or any listed variable changes, giving proper dependency
# tracking for generated content.
#
# configure_file(
#     "${CMAKE_CURRENT_SOURCE_DIR}/Source/PluginInit.cpp.in"
#     "${CMAKE_BINARY_DIR}/PluginInit.cpp"
#     @ONLY
# )
# target_sources(VolterraPlugin PRIVATE "${CMAKE_BINARY_DIR}/PluginInit.cpp")

# ─────────────────────────────────────────────────────────────────────────────
#  Status summary
# ─────────────────────────────────────────────────────────────────────────────
message(STATUS "=== VolterraPlugin build config ===")
message(STATUS "  CUDA support : ${VOLTERRA_CUDA}")
if(VOLTERRA_CUDA)
    message(STATUS "  CUDA arches  : ${CMAKE_CUDA_ARCHITECTURES}")
    message(STATUS "  cuBLAS       : ${CUDAToolkit_LIBRARY_ROOT}/lib")
endif()
message(STATUS "  Plugin fmts  : VST3, AU, Standalone")
message(STATUS "  C++ std      : C++17")
message(STATUS "====================================")
